# job_scheduler

./: README.md  exp.py  modeling.ipynb  modeling_1.ipynb  pyproject.toml  setup.py
data/: process.csv  release.csv  weights.csv
model/: exp.py  model_1.py  model_2.py  model_3.py  model_4.py  opt_plan_1.py  opt_plan_2.py  opt_plan_3.py
model/result/model_1/: job_order.csv  time.csv
model/result/model_2/: job_order.csv  time.csv
model/result/model_3/: job_order.csv  time.csv
model/utils/: log.py
model_2/: model_2.py  opt_plan_2.py
result/model_1/: job_order.csv  time.csv
result/model_2/: job_order.csv  time.csv
result/model_3/: job_order.csv  time.csv
