[tool.poetry]
name = "job-scheduler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "job_scheduler"}]

[tool.poetry.dependencies]
python = "3.8.10"
pulp = "^2.7.0"
black = "^23.3.0"
mypy = "^1.2.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pysen = "^0.10.4"
joblib = "^1.2.0"
tqdm = "^4.65.0"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.4"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]